--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -59,5 +59,5 @@ jobs:
         uses: canonical-web-and-design/inclusive-naming@main
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-check
+          reporter: github-pr-review
           fail-on-error: true
