Pin setuptools to 65.7.0
> Projects should adapt to provide conformant versions (i.e. 0.23+ubuntu1) or environments that rely on such packages should pin to Setuptools < 66. These changes are necessary to keep Setuptools healthy and aligned with the goals of the packaging ecosystem.

https://github.com/pypa/setuptools/issues/3772

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,8 @@ jobs:
 
     - name: Install system dependencies
       run: |
-        pip3 install --upgrade setuptools pip
+        pip3 install --upgrade pip
+        pip3 install setuptools==65.7.0
         pip3 install wheel twine
 
     - name: Build package
