--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,8 +11,7 @@ jobs:
 
     - name: Install system dependencies
       run: |
-        pip3 install --upgrade pip
-        pip3 install setuptools==65.7.0
+        pip3 install --upgrade setuptools==65.7.0 pip
         pip3 install wheel twine
 
     - name: Build package
@@ -29,7 +28,7 @@ jobs:
 
     - name: Install system dependencies
       run: |
-        pip3 install --upgrade setuptools pip
+        pip3 install --upgrade setuptools==65.7.0 pip
         pip3 install flake8 black
 
     - name: Lint Python
@@ -43,7 +42,7 @@ jobs:
 
     - name: Install system dependencies
       run: |
-        pip3 install --upgrade setuptools pip
+        pip3 install --upgrade setuptools==65.7.0 pip
         pip3 install wheel
 
     - name: Test Python
