--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,12 +27,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install system dependencies
-      run: |
-        pip3 install --upgrade setuptools==65.7.0 pip
-        pip3 install flake8 black
+      run: pip3 install tox
 
     - name: Lint Python
-      run: python3 -m flake8 --extend-ignore=E203 canonicalwebteam tests setup.py && python3 -m black --line-length 79 --check canonicalwebteam tests setup.py
+      run: tox -e lint
 
   test-python:
     runs-on: ubuntu-latest
@@ -41,12 +39,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install system dependencies
-      run: |
-        pip3 install --upgrade setuptools==65.7.0 pip
-        pip3 install wheel
+      run: pip3 install tox
 
     - name: Test Python
-      run: python3 setup.py test
+      run: tox -e test
 
   check-inclusive-naming:
     runs-on: ubuntu-latest
