Support formatting with tox

--- a/tox.ini
+++ b/tox.ini
@@ -21,3 +21,10 @@ deps =
 commands =
     flake8 --extend-ignore=E203 canonicalwebteam tests setup.py
     black --line-length 79 --check canonicalwebteam tests setup.py
+
+[testenv:format]
+description = Format Python
+deps =
+    black
+commands =
+    black --line-length 79 canonicalwebteam tests setup.py
