fix: Publish action fails

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,14 +14,16 @@ jobs:
 
     - name: Install system dependencies
       run: |
-        pip3 install --upgrade setuptools pip
+        sudo apt update && sudo apt install -y --no-install-recommends python3-setuptools
+        pip3 install --upgrade setuptools
         pip3 install wheel
 
     - name: Build package
       run: python3 setup.py sdist bdist_wheel
 
     - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@81e9d935c883d0b210363ab89cf05f3894778450
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
         password: ${{ secrets.pypi_password }}
+
